<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <Button
        android:id="@+id/button_entrant"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        android:text="Entrant" />

    <Button
        android:id="@+id/button_organizer"
        android:layout_width="150dp"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Organizer" />

    <Button
        android:id="@+id/button_admin"
        android:layout_width="150dp"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Admin" />

</LinearLayout>
